modules/gdscript/tests/scripts/analyzer/errors/match_guard_invalid_expression.gd
func test():
	match 0:
		_ when a == 0:
			print("a does not exist")
